# leapmotion

./: .gitignore  CMakeLists.txt  INSTALL.txt  Makefile  README.md
help/: leapmotion-help.pd
help/lib/: gesture.pd  hand.pd  point.pd  tool.pd
include/: Dispatcher.h  LeapMotionObj.h  leapmotion.h
src/: Dispatcher.cpp  LeapMotionObj.cpp  leapmotion.cpp
